# finance-data-pipeline

./: .gitignore  README.md  balance_sheet_output.csv  docker-compose.yaml  finance.duckdb  financials.json  gitignore  main.py  main.tf  output.txt  pyproject.toml
.secrets/: fmp.json
bigquery_scripts/: .env.example  01_create_external_tables.sql  02_create_managed_tables.sql  03_data_transformations.sql  04_sample_queries.sql  ARCHITECTURE.md  QUICKSTART.md  README.md  bigquery_orchestrator.py  requirements.txt
bigquery_scripts/archive/: deploy.sh  run_pipeline.sh  validate_setup.py
database/: finance.duckdb
ingestion_scripts/: export_data_to_csv.ipynb  export_data_to_csv.py  extract_schema.py  get_financials.py  import_csv_to_duckdb.py  load_duckdb.py  recent_fin_data.ipynb  upload_to_gcp.py
ingestion_scripts/jupyter_notebooks/: export_data_to_csv.ipynb  upload_to_gcp.ipynb
raw_data/: balance_sheet.csv  cash_flow_statement.csv  company_info.csv  financials.json  income_statement.csv
raw_data/CSV/: balance_sheet.csv  cash_flow_statement.csv  company_info.csv  income_statement.csv
