[project]
name = "finance-data-pipeline"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "==3.13"
dependencies = [
    "argparse>=1.4.0",
    "duckdb>=1.5.1",
    "pandas>=3.0.1",
    "requests>=2.32.5",
    "yfinance>=1.2.0",
]

[dependency-groups]
dev = [
    "sqlalchemy>=2.0.48",
]
