[project]
name = "finance-data-pipeline"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "==3.13"
dependencies = [
    "argparse>=1.4.0",
    "dotenv>=0.9.9",
    "duckdb>=1.5.1",
    "gcloud>=0.18.3",
    "google>=3.0.0",
    "google-cloud>=0.34.0",
    "google-cloud-bigquery>=3.41.0",
    "google-cloud-storage>=3.10.1",
    "pandas>=3.0.1",
    "requests>=2.32.5",
    "yfinance>=1.2.0",
]

[dependency-groups]
dev = [
    "duckdb>=1.5.1",
    "sqlalchemy>=2.0.48",
]
